--- a/Primeiro Site.html
+++ b/Primeiro Site.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <header>
-        <img src="barra.jpg" alt="faixa cinza">
+        <img src="img/barra.jpg" alt="faixa cinza">
         <h2>Jéssica Portugal</h2>
-        <p><img src="Foto.jpg" alt="foto do perfil"></p>
+        <p><img src="img/Foto.jpg" alt="foto do perfil"></p>
     </header>
     <section>
         <header>
