Primeiro site passo 3.3

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jessica Portugal</title>
     <link rel="stylesheet" href="Style.css">
 </head>
@@ -11,8 +12,8 @@
     <header>
         <nav class="container">
                  <div class="selfie"><p><img src="img/Foto.jpg" alt="foto do perfil" class="post_image" width="70" height="70"></p></div>
-                 <div class="nav"><a href="">Sobre mim</a></div>
-                 <div class="Main"><a href="">Portifolio Virtual </a> </div>
+                 <div class="nav"><a href="">Sobre Mim</a></div>
+                 <div class="Main"><a href="https://github.com/Jemportugal?tab=repositories">Portifolio </a> </div>
 
         </nav>
     </header>
@@ -27,7 +28,7 @@
 
     <footer>  
         <nav class="footer"> 
-            <h3>Contatos</h3>
+            <h3 >Contatos</h3>
 
                     <a href="mailto:jessicamendesdeportugal@gmail.com" target="_blank" class="link">
                         <img src="img/Email.jpg" alt="Email" width="25" height="25" class="logo"> Email</a>
